--- a/app/webroot/css/chat-box.css
+++ b/app/webroot/css/chat-box.css
@@ -76,11 +76,13 @@
     right: 5px;
 }
 
-.receiver-message .message-time {
+.message-time-receiver {
     font-size: 12px;
     color: #888;
     right: unset;
-    left: 10px;
+    padding-left: 10px;
+    margin-bottom: 5px; /* Add margin for spacing */
+    margin-right: 10px; /* Add margin for spacing */
 }
 
 .message-input {
