--- a/app/webroot/css/chat-box.css
+++ b/app/webroot/css/chat-box.css
@@ -1,13 +1,14 @@
-/* Your CSS styles here */
+
 .chat-container {
     width: 500px;
+    margin: auto;
     height: 70%;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px;
     display: flex;
-    flex-direction: column-reverse; /* Reverse the order of flex items */
+    flex-direction: column-reverse;
     background-color: white;
 }
 
@@ -37,7 +38,7 @@
 }
 
 .sender-message {
-    text-align: right;
+    padding: 5px;
     background-color: #007bff;
     color: #fff;
     margin-left: auto;
@@ -50,30 +51,34 @@
     margin-right: auto;
     max-width: 60%;
     padding: 10px 10px 0px 0px;
+    position: relative;
 }
 
 .profile-picture {
-    width: 50px; /* Adjust size as needed */
-    height: 50px; /* Adjust size as needed */
+    width: 45;
+    height: 45px;
     border-radius: 50%;
+    margin-right: 5px;
+    border: 1px solid #555;
 }
 
 .message-content {
-    flex: 1; /* Fill remaining space in flex container */
-    padding: 10px; /* Adjust padding */
-    border-radius: 20px; /* Retain border radius */
+    flex: 1;
+    padding: 10px; 
+    border-radius: 20px; 
 }
 
 .receiver-message .message-content {
     background-color: #b9b3b3;
 }
 
-.message-time {
+.message-time-sender {
     font-size: 12px;
     color: #888;
-    position: absolute;
-    bottom: -20px;
-    right: 5px;
+    float: right;
+    padding-left: 10px;
+    margin-bottom: 5px; 
+    margin-right: 10px; 
 }
 
 .message-time-receiver {
@@ -81,8 +86,8 @@
     color: #888;
     right: unset;
     padding-left: 10px;
-    margin-bottom: 5px; /* Add margin for spacing */
-    margin-right: 10px; /* Add margin for spacing */
+    margin-bottom: 5px; 
+    margin-right: 10px; 
 }
 
 .message-input {
@@ -98,6 +103,7 @@
     background-color: #007bff;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    position:relative;
 }
 
 .message-input input {
@@ -120,15 +126,15 @@
     height: 35px;
 }
 
-/* CSS for loading indicator */
+
 .loading-here {
-    display: none; /* Initially hidden */
+    display: none; 
     text-align: center;
 }
 
 .loading-spinner {
-    border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
+    border: 5px solid #f3f3f3; 
+    border-top: 5px solid #3498db; 
     border-radius: 50%;
     width: 25px;
     height: 25px;
@@ -139,4 +145,108 @@
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+form {
+    margin: 0 !important;
+}
+
+.floating-button {
+    display: none;
+    position: absolute;
+    right: 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    width: 150px;
+    height: 50px;
+    font-size: 12px;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    transform: translateX(-50%);
+    left: 50%;
+    margin-top: -100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-icon {
+    margin-right: 5px;
+    margin-top: -5px;
+    font-size: 24px;
+}
+
+.settings-button {
+    background-color: transparent;
+    float: right;
+    border: none;
+    font-size: 24px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.main-container {
+    flex-direction: unset !important;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.settings-panel {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: -3px 0 5px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+}
+
+
+.chat-box-container, .settings-container {
+    height: 80vh;
+    width: auto;
+}
+
+.settings-container {
+    width: fit-content;
+    display: none;
+}
+
+.settings-container .message-input{
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 300px;
+}
+
+.settings-container .chat-container{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    width: 300px;
+    flex-direction: column !important;
+}
+
+.settings-container .sender-message {
+    display: flex;
+    align-items: flex-end;
+    color: #ffffff;
+    margin-right: auto;
+    max-width: 100%;
+    padding: 10px 10px 0px 0px;
+    position: relative;
+    margin-left: 0 !important;
+    background-color: #0000 !important;
+}
+
+.settings-container .sender-message .message-content {
+    background-color: #007bff;
+}
+
+form {
+    width: 100%;
 }
