--- a/app/webroot/css/chat-box.css
+++ b/app/webroot/css/chat-box.css
@@ -250,3 +250,16 @@ form {
 form {
     width: 100%;
 }
+
+.delete-button {
+    display: block; /* Hide the delete button by default */
+}
+
+.delete-button button {
+    background-color: #ff0000;
+    color: #ffffff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
